Remove filerep from gpdb-tpl and enabled walrep
Author: Xin Zhang <xzhang@pivotal.io>
Author: Jimmy Yih <jyih@pivotal.io>

--- a/concourse/pipelines/templates/gpdb-tpl.yml
+++ b/concourse/pipelines/templates/gpdb-tpl.yml
@@ -1,21 +1,9 @@
 ## ======================================================================
 {% set cs_walrep_suites = ['walrep_1',
                            'walrep_2'] %}
-{% set cs_pg_twophase_suites = ['pg_twophase_01_10',
-                                'pg_twophase_11_20',
-                                'pg_twophase_21_30',
-                                'pg_twophase_31_40',
-                                'pg_twophase_41_49',
-                                'switch_01_12'] %}
-{% set cs_crash_recovery_suite = ['crash_recovery_schema_topology',
-                                  'crash_recovery_04_10',
-                                  'crash_recovery_11_20',
-                                  'crash_recovery_21_30',
-                                  'crash_recovery_31_42'] %}
-{% set cs_filerep_end_to_end_suites = ['filerep_end_to_end_full_mirror',
-                                'filerep_end_to_end_incr_mirror',
-                                'filerep_end_to_end_full_primary',
-                                'filerep_end_to_end_incr_primary'] %}
+{% set cs_pg_twophase_suites = ['pg_twophase'] %}
+{% set cs_crash_recovery_suite = ['crash_recovery_schema_topology'] %}
+
 {% set MM_1_suites = ['gprecoverseg',
                       'gpcheckcat'] %}
 {% set MM_2_suites = ['analyzedb',
@@ -41,7 +29,6 @@ groups:
   - compile_gpdb_centos6
   - compile_gpdb_binary_swap_centos6
   - compile_gpdb_open_source_centos6
-  - compile_gpdb_segwalrep_centos6
 {% endif %}
 {% if "centos7" in os_types %}
   - compile_gpdb_centos7
@@ -68,10 +55,8 @@ groups:
 {% if "centos6" in os_types %}
   - icw_gporca_centos6
   - icw_gporca_centos6_gpos_memory
-  - icw_gporca_segwalrep_centos6
   - icw_planner_centos6
   - icw_planner_ictcp_centos6
-  - icw_planner_segwalrep_centos6
   - QP_memory-accounting
 {% endif %}
 {% if 'centos6' in os_types or 'ubuntu16' in os_types %}
@@ -102,7 +87,6 @@ groups:
                     cs_crash_recovery_suite %}
   - cs_[[ test_name ]]
 {% endfor %}
-  - fts
   - storage
   - segwalrep_mirrorless_centos6
   - gate_cs_end
@@ -130,7 +114,6 @@ groups:
 {% endfor %}
   - MM_gpcheck
   - MM_gppkg
-  - MM_pt-rebuild
   - MU_check_centos
   - gate_mm_end
 {% endif %}
@@ -147,14 +130,6 @@ groups:
   - regression_tests_pxf
   - regression_tests_gphdfs_centos
   - gate_ud_end
-{% endif %}
-{% if "FileRep" in test_sections %}
-  ## --------------------------------------------------------------------
-  - gate_filerep_start
-{% for test_name in cs_filerep_end_to_end_suites %}
-  - cs_[[ test_name ]]
-{% endfor %}
-  - gate_filerep_end
 {% endif %}
 
 {% if pipeline_type == "prod" %}
@@ -174,7 +149,6 @@ groups:
   - compile_gpdb_centos6
   - compile_gpdb_binary_swap_centos6
   - compile_gpdb_open_source_centos6
-  - compile_gpdb_segwalrep_centos6
 {% endif %}
 {% if "centos7" in os_types %}
   - compile_gpdb_centos7
@@ -203,10 +177,8 @@ groups:
 {% if "centos6" in os_types %}
   - icw_gporca_centos6
   - icw_gporca_centos6_gpos_memory
-  - icw_gporca_segwalrep_centos6
   - icw_planner_centos6
   - icw_planner_ictcp_centos6
-  - icw_planner_segwalrep_centos6
   - QP_memory-accounting
 {% endif %}
 {% if 'centos6' in os_types or 'ubuntu16' in os_types %}
@@ -241,22 +213,10 @@ groups:
                     cs_crash_recovery_suite %}
   - cs_[[ test_name ]]
 {% endfor %}
-  - fts
   - storage
   - segwalrep_mirrorless_centos6
   - gate_cs_end
 
-## ======================================================================
-
-{% if "centos6" in os_types %}
-- name: G:SegWALRep
-  jobs:
-  - compile_gpdb_segwalrep_centos6
-  - icw_planner_segwalrep_centos6
-  - icw_gporca_segwalrep_centos6
-  - segwalrep_mirrorless_centos6
-
-{% endif %}
 {% endif %}
 {% if "MPP" in test_sections %}
 ## ======================================================================
@@ -288,7 +248,6 @@ groups:
 {% endfor %}
   - MM_gpcheck
   - MM_gppkg
-  - MM_pt-rebuild
   - MU_check_centos
   - gate_mm_end
 
@@ -313,18 +272,6 @@ groups:
   - regression_tests_pxf
   - regression_tests_gphdfs_centos
   - gate_ud_end
-
-{% endif %}
-{% if "FileRep" in test_sections %}
-## ======================================================================
-
-- name: G:FileRep
-  jobs:
-  - gate_filerep_start
-{% for test_name in cs_filerep_end_to_end_suites %}
-  - cs_[[ test_name ]]
-{% endfor %}
-  - gate_filerep_end
 
 {% endif %}
 ## ======================================================================
@@ -353,7 +300,6 @@ resources:
 {% if ("ICW"    in test_sections and "sles" in os_types) or
       "CS"      in test_sections or
       "DPM"     in test_sections or
-      "FileRep" in test_sections or
       "MPP"     in test_sections or
       "MM"      in test_sections %}
 - name: ccp_src
@@ -500,15 +446,6 @@ resources:
     region_name: {{aws-region}}
     secret_access_key: {{bucket-secret-access-key}}
     versioned_file: pxf_artifacts/prod/pxf_branch_master/stable/pxf.tar.gz
-
-- name: bin_gpdb_segwalrep_centos6
-  type: s3
-  source:
-    access_key_id: {{bucket-access-key-id}}
-    bucket: {{bucket-name}}
-    region_name: {{aws-region}}
-    secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: {{segwalrep_gpdb_centos_versioned_file}}
 
 {% endif %}
 {% if "ubuntu16" in os_types %}
@@ -885,35 +822,6 @@ jobs:
       params:
         file: gpdb_artifacts/bin_gpdb.tar.gz
 
-- name: compile_gpdb_segwalrep_centos6
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [gate_compile_start]
-      trigger: ((gpdb_src-trigger-flag))
-    - get: reduced-frequency-trigger
-      trigger: ((reduced-frequency-trigger-flag))
-    - get: gpaddon_src
-      passed: [gate_compile_start]
-    - get: centos-gpdb-dev-6
-      passed: [gate_compile_start]
-  - task: compile_gpdb
-    file: gpdb_src/concourse/tasks/compile_gpdb.yml
-    image: centos-gpdb-dev-6
-    params:
-      IVYREPO_HOST: {{ivyrepo_host}}
-      IVYREPO_REALM: {{ivyrepo_realm}}
-      IVYREPO_USER: {{ivyrepo_user}}
-      IVYREPO_PASSWD: {{ivyrepo_passwd}}
-      CONFIGURE_FLAGS: "((configure_flags)) --enable-segwalrep"
-      TARGET_OS: centos
-      TARGET_OS_VERSION: 6
-      BLD_TARGETS: "clients loaders"
-  - aggregate:
-    - put: bin_gpdb_segwalrep_centos6
-      params:
-        file: gpdb_artifacts/bin_gpdb.tar.gz
-
 {% endif %}
 {% if "centos7" in os_types %}
 - name: compile_gpdb_centos7
@@ -1195,7 +1103,6 @@ jobs:
 {% if "centos6" in os_types %}
       - compile_gpdb_centos6
       - compile_gpdb_open_source_centos6
-      - compile_gpdb_segwalrep_centos6
 {% endif %}
 {% if "centos7" in os_types %}
       - compile_gpdb_centos7
@@ -1219,9 +1126,6 @@ jobs:
     - get: bin_gpdb_centos6
       passed:
       - compile_gpdb_centos6
-    - get: bin_gpdb_segwalrep_centos6
-      passed:
-      - compile_gpdb_segwalrep_centos6
 {% endif %}
 {% if "centos7" in os_types %}
     - get: bin_gpdb_centos7
@@ -1270,9 +1174,6 @@ jobs:
       - get: bin_gpdb_centos6
         passed:
         - gate_compile_end
-      - get: bin_gpdb_segwalrep_centos6
-        passed:
-        - gate_compile_end
 {% endif %}
 {% if "ubuntu16" in os_types %}
       - get: compiled_bits_ubuntu16
@@ -1299,7 +1200,7 @@ jobs:
       trigger: [[ test_trigger ]]
     - get: centos-gpdb-dev-6
   - task: ic_gpdb
-    file: gpdb_src/concourse/tasks/ic_gpdb_binary_swap.yml
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos-gpdb-dev-6
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off' installcheck-world
@@ -1324,42 +1225,6 @@ jobs:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on' installcheck-world
       TEST_OS: centos
       CONFIGURE_FLAGS: {{configure_flags}}
-
-- name: icw_planner_segwalrep_centos6
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [gate_icw_start]
-    - get: bin_gpdb
-      resource: bin_gpdb_segwalrep_centos6
-      passed: [gate_icw_start]
-      trigger: true
-    - get: centos-gpdb-dev-6
-  - task: ic_gpdb
-    file: gpdb_src/concourse/tasks/ic_gpdb.yml
-    image: centos-gpdb-dev-6
-    params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off' installcheck-world
-      TEST_OS: centos
-      CONFIGURE_FLAGS: "((configure_flags)) --enable-segwalrep"
-
-- name: icw_gporca_segwalrep_centos6
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [gate_icw_start]
-    - get: bin_gpdb
-      resource: bin_gpdb_segwalrep_centos6
-      passed: [gate_icw_start]
-      trigger: true
-    - get: centos-gpdb-dev-6
-  - task: ic_gpdb
-    file: gpdb_src/concourse/tasks/ic_gpdb.yml
-    image: centos-gpdb-dev-6
-    params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on' installcheck-world
-      TEST_OS: centos
-      CONFIGURE_FLAGS: "((configure_flags)) --enable-segwalrep"
 
 - name: icw_gporca_centos6_gpos_memory
   plan:
@@ -1476,6 +1341,7 @@ jobs:
       vars:
         <<: *ccp_default_vars
         platform: sles12
+        aws_ebs_volume_size: 128
         aws_instance-node-instance_type: m4.xlarge
         number_of_nodes: 1
   - task: gen_cluster
@@ -1523,6 +1389,7 @@ jobs:
       vars:
         <<: *ccp_default_vars
         platform: sles12
+        aws_ebs_volume_size: 128
         aws_instance-node-instance_type: m4.xlarge
         number_of_nodes: 1
   - task: gen_cluster
@@ -1663,26 +1530,13 @@ jobs:
 - name: gate_icw_end
   plan:
   - aggregate:
-    - get: bin_gpdb_centos6
-      passed:
-{% if "centos6" in os_types %}
-      - icw_gporca_centos6
-      - icw_gporca_centos6_gpos_memory
-      - icw_planner_centos6
-      - icw_planner_ictcp_centos6
-      - QP_memory-accounting
-      - icw_extensions_gpcloud
-{% endif %}
-      trigger: true
     - get: gpdb_src
       passed:
 {% if "centos6" in os_types %}
       - icw_gporca_centos6
       - icw_gporca_centos6_gpos_memory
-      - icw_gporca_segwalrep_centos6
       - icw_planner_centos6
       - icw_planner_ictcp_centos6
-      - icw_planner_segwalrep_centos6
       - QP_memory-accounting
 {% endif %}
 {% if 'centos6' in os_types or 'ubuntu16' in os_types %}
@@ -1743,9 +1597,6 @@ jobs:
       - gate_compile_end
 {% endif %}
     - get: bin_gpdb_centos6
-      passed:
-      - gate_compile_end
-    - get: bin_gpdb_segwalrep_centos6
       passed:
       - gate_compile_end
 
@@ -1850,28 +1701,6 @@ jobs:
     <<: *set_failed
 
 {% endfor %}
-- name: fts
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      params: {submodules: none}
-      passed: [gate_cs_start]
-    - get: bin_gpdb
-      resource: bin_gpdb_centos6
-      passed: [gate_cs_start]
-      trigger: [[ test_trigger ]]
-    - get: centos-gpdb-dev-6
-  - aggregate:
-{% for test_id in range(1,4) %}
-    - task: fts_transitions_part0[[ test_id ]]
-      file: gpdb_src/concourse/tasks/tinc_gpdb.yml
-      image: centos-gpdb-dev-6
-      params:
-        MAKE_TEST_COMMAND: fts_transitions_part0[[ test_id ]]
-        BLDWRAP_POSTGRES_CONF_ADDONS: gp_segment_connect_timeout=35 gp_fts_probe_interval=20
-        TEST_OS: centos
-        CONFIGURE_FLAGS: {{configure_flags}}
-{% endfor %}
 
 - name: storage
   plan:
@@ -1900,14 +1729,6 @@ jobs:
         CONFIGURE_FLAGS: {{configure_flags}}
       image: centos-gpdb-dev-6
       timeout: 3h
-    - task: storage_filerep
-      file: gpdb_src/concourse/tasks/tinc_gpdb.yml
-      params:
-        MAKE_TEST_COMMAND: storage_filerep
-        TEST_OS: centos
-        CONFIGURE_FLAGS: {{configure_flags}}
-      image: centos-gpdb-dev-6
-      timeout: 3h
     - task: storage_uao_transactionmanagement
       file: gpdb_src/concourse/tasks/tinc_gpdb.yml
       params:
@@ -1931,9 +1752,9 @@ jobs:
     - get: gpdb_src
       passed: [gate_cs_start]
     - get: bin_gpdb
-      resource: bin_gpdb_segwalrep_centos6
+      resource: bin_gpdb_centos6
       passed: [gate_cs_start]
-      trigger: true
+      trigger: [[ test_trigger ]]
     - get: centos-gpdb-dev-6
   - task: ic_gpdb
     file: gpdb_src/concourse/tasks/ic_gpdb.yml
@@ -1941,7 +1762,7 @@ jobs:
     params:
       MAKE_TEST_COMMAND: "-C src/test/regress && make -C src/test/walrep install installcheck"
       TEST_OS: centos
-      CONFIGURE_FLAGS: "((configure_flags)) --enable-segwalrep"
+      CONFIGURE_FLAGS: {{configure_flags}}
       WITH_MIRRORS: false
 
 - name: gate_cs_end
@@ -1954,7 +1775,6 @@ jobs:
                     cs_crash_recovery_suite %}
       - cs_[[ test_name ]]
 {% endfor %}
-      - fts
       - storage
       - segwalrep_mirrorless_centos6
       trigger: true
@@ -2351,23 +2171,6 @@ jobs:
       BEHAVE_TAGS: [[ test_name ]]
 
 {% endfor %}
-- name: MM_pt-rebuild
-  plan:
-  - aggregate: *gets_for_behave
-  - aggregate:
-    - task: persistent_table_rebuild
-      file: gpdb_src/concourse/tasks/behave_gpdb.yml
-      image: centos-gpdb-dev-6
-      params:
-        BEHAVE_TAGS: persistent_rebuild
-    - task: persistent_table_rebuild_crash_recovery
-      file: gpdb_src/concourse/tasks/tinc_gpdb.yml
-      image: centos-gpdb-dev-6
-      params:
-        MAKE_TEST_COMMAND: persistent_table_rebuild
-        TEST_OS: centos
-        CONFIGURE_FLAGS: {{configure_flags}}
-
 - name: MU_check_centos
   plan:
   - aggregate:
@@ -2448,9 +2251,8 @@ jobs:
 {% endfor %}
       - MM_gpcheck
       - MM_gppkg
-      - MM_pt-rebuild
       - MU_check_centos
-      
+
       trigger: true
 
 {% endif %}
@@ -2780,94 +2582,6 @@ jobs:
       trigger: true
 
 {% endif %}
-{% if "FileRep" in test_sections %}
-## ======================================================================
-##  _____ _ _      ____            
-## |  ___(_) | ___|  _ \ ___ _ __  
-## | |_  | | |/ _ \ |_) / _ \ '_ \ 
-## |  _| | | |  __/  _ <  __/ |_) |
-## |_|   |_|_|\___|_| \_\___| .__/ 
-##                          |_|    
-## ======================================================================
-
-- name: gate_filerep_start
-  plan:
-  - task: sleep_before_starting
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: alpine
-      run:
-        path: 'sh'
-        args: ['-c', 'sleep `expr 6 \* {{group_start_delay}} + 1 + $RANDOM % {{group_delay_jitter}}`']
-  - aggregate:
-    - get: gpdb_src
-      passed:
-      - gate_compile_end
-      trigger: true
-    - get: bin_gpdb_centos6
-      passed:
-      - gate_compile_end
-
-{% for test_name in cs_filerep_end_to_end_suites %}
-- name: cs_[[ test_name ]]
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      tags: ["ccp"]
-      passed: [gate_filerep_start]
-    - get: gpdb_binary
-      tags: ["ccp"]
-      resource: bin_gpdb_centos6
-      passed: [gate_filerep_start]
-      trigger: [[ test_trigger ]]
-    - get: ccp_src
-      tags: ["ccp"]
-    - get: centos-gpdb-dev-6
-      tags: ["ccp"]
-  - put: terraform
-    tags: ["ccp"]
-    params:
-      <<: *ccp_default_params
-      terraform_source: ccp_src/aws-nvme-block-device/
-      vars:
-        <<: *ccp_default_vars
-        aws_instance-node-instance_type: i3.xlarge
-{% if test_name != 'filerep_end_to_end_full_primary' %}
-        number_of_nodes: 1
-{% endif %}
-  - task: gen_cluster
-    tags: ["ccp"]
-    file: ccp_src/ci/tasks/gen_cluster.yml
-    params:
-      <<: *ccp_gen_cluster_default_params
-  - task: run_tests
-    tags: ["ccp"]
-    file: gpdb_src/concourse/tasks/run_tinc.yml
-    image: centos-gpdb-dev-6
-    params:
-      TINC_TARGET: [[ test_name ]]
-    on_success:
-      <<: *ccp_destroy
-    on_failure:
-      <<: *set_failed
-  ensure:
-    <<: *set_failed
-
-{% endfor %}
-- name: gate_filerep_end
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed:
-{% for test_name in cs_filerep_end_to_end_suites %}
-      - cs_[[ test_name ]]
-{% endfor %}
-      trigger: true
-
-{% endif %}
 {% if pipeline_type == "prod" %}
 ## ======================================================================
 ##  ____      _                     
@@ -2889,7 +2603,6 @@ jobs:
     - compile_gpdb_ubuntu16
     - compile_gpdb_windows_cl
     - compile_gpdb_aix7_remote
-    - compile_gpdb_segwalrep_centos6
     - icw_planner_centos6
     - icw_gporca_centos6
     - icw_gporca_centos7
@@ -2901,19 +2614,15 @@ jobs:
     - test_gpdb_debian_package
     - icw_planner_ictcp_centos6
     - icw_extensions_gpcloud
-    - icw_planner_segwalrep_centos6
-    - icw_gporca_segwalrep_centos6
     - client_loader_remote_test_aix
     - mpp_resource_group_centos6
     - mpp_resource_group_centos7
     - mpp_resource_group_sles12
-    - fts
     - storage
     - segwalrep_mirrorless_centos6
 {% for test_name in cs_walrep_suites +
                     cs_pg_twophase_suites +
-                    cs_crash_recovery_suite +
-                    cs_filerep_end_to_end_suites %}
+                    cs_crash_recovery_suite %}
     - cs_[[ test_name ]]
 {% endfor %}
     - QP_memory-accounting
@@ -2926,7 +2635,6 @@ jobs:
 {% endfor %}
     - MM_gpcheck
     - MM_gppkg
-    - MM_pt-rebuild
     - MU_check_centos
     - DPM_gptransfer_43x_to_master
     - DPM_gptransfer
