Clarify comment on gp_replica_check compatibility
We can't run gp_replica_check on btree, gin and gist as they are
currently not guaranteeing physical equivalence, only logical.
When we've merged 9.4, we can however start turning this on again
as the pages are then holding the physical equivalence property.

--- a/contrib/gp_replica_check/Makefile
+++ b/contrib/gp_replica_check/Makefile
@@ -14,7 +14,7 @@ include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
 endif
 
-# For now run don't run for object types like btree as
-# there are still known differences to be fixed.
+# GPDB_94_MERGE_FIXME: Enable btree, gin and gist when physical and logical
+# order is equivalent.
 installcheck: install
 	gp_replica_check.py -r="heap, sequence, ao"
