Revert encoding handling in pg_regress to upstream
If we avoid calling pg_regress with an empty --multibyte we
can skip GPDB specific handling of the encoding parameter in
pg_regress and instead follow upstream. While the local diffs
to pg_regress weren't wrong per se, avoiding merge conflicts
is of more interest.

Also revert the commented out MULTIBYTE in the makefile to
match the upstream value. A follow-up commit will fix this
as well.

--- a/src/test/regress/GNUmakefile
+++ b/src/test/regress/GNUmakefile
@@ -27,7 +27,7 @@ PGPORT?=15432
 PSQLDIR = $(bindir)
 
 # default encoding
-##MULTIBYTE = LATIN1
+MULTIBYTE = SQL_ASCII
 
 # maximum simultaneous connections for parallel tests
 MAXCONNOPT =
