Use PXF docker image to run PXF smoke (#4416)
* Use PXF docker image to run PXF smoke

* Remove unused singlecluster resource

--- a/concourse/pipelines/templates/gpdb-tpl.yml
+++ b/concourse/pipelines/templates/gpdb-tpl.yml
@@ -386,6 +386,12 @@ resources:
     private_key: {{pxf_infra-git-key}}
     uri: {{pxf_infra-git-remote}}
 
+- name: centos6-gpdb-dev-pxf-hdp
+  type: docker-image
+  source:
+    repository: pivotaldata/gpdb-dev
+    tag: centos6-pxf-hdp-server
+
 {% endif %}
 {% if "ubuntu16" in os_types %}
 - name: debian_release
@@ -556,17 +562,6 @@ resources:
     region_name: {{aws-region}}
     secret_access_key: {{bucket-secret-access-key}}
     versioned_file: {{deb_package_ubuntu16_versioned_file}}
-
-{% endif %}
-{% if "UD" in test_sections %}
-- name: singlecluster
-  type: s3
-  source:
-    access_key_id: {{bucket-access-key-id}}
-    secret_access_key: {{bucket-secret-access-key}}
-    bucket: {{pxf-aws-bucket-name}}
-    region_name: {{aws-region}}
-    versioned_file: singlecluster/singlecluster-HDP.tar.gz
 
 {% endif %}
 {% if 'DPM' in test_sections + os_types or 'aix7' in test_sections + os_types %}
@@ -2521,19 +2516,16 @@ jobs:
       resource: bin_gpdb_centos6
       passed: [gate_ud_start]
       trigger: [[ test_trigger ]]
-    - get: singlecluster
-      trigger: [[ test_trigger ]]
     - get: pxf_tarball
       trigger: [[ test_trigger ]]
     - get: pxf_infra_src
-      trigger: [[ test_trigger ]]
-    - get: centos-gpdb-dev-6
+    - get: centos6-gpdb-dev-pxf-hdp
   - task: test_pxf
     file: pxf_infra_src/concourse/test_pxf.yml
-    image: centos-gpdb-dev-6
+    image: centos6-gpdb-dev-pxf-hdp
     params:
       GROUP: smoke
-      HADOOP_CLIENT: TAR
+      HADOOP_CLIENT: HDP
       TARGET_OS: centos
       TARGET_OS_VERSION: 6
 
