Don't run regression tests in SQL_ASCII encoding by default
This is a partial backport of the below commit from PostgreSQL 9.1,
the part left out is documentation:

  commit 35eb0958be476d58dcc8ba462d57384e74a62d88
  Author: Peter Eisentraut <peter_e@gmx.net>
  Date:   Thu Jan 13 09:13:12 2011 +0200

    Don't run regression tests in SQL_ASCII encoding by default

    Instead, run them in the encoding that the locale selects, which is
    more representative of real use.

    Also document how locale and encoding for regression test runs can be
    selected.

--- a/src/test/regress/GNUmakefile
+++ b/src/test/regress/GNUmakefile
@@ -26,9 +26,6 @@ PGPORT?=15432
 # where to find psql for testing an existing installation
 PSQLDIR = $(bindir)
 
-# default encoding
-MULTIBYTE = SQL_ASCII
-
 # maximum simultaneous connections for parallel tests
 MAXCONNOPT =
 ifdef MAX_CONNECTIONS
@@ -175,7 +172,7 @@ hooktest:
 ## Run tests
 ##
 
-pg_regress_call = ./pg_regress --inputdir=$(srcdir) --dlpath=. --multibyte=$(MULTIBYTE) $(MAXCONNOPT) $(NOLOCALE) --init-file=$(srcdir)/init_file
+pg_regress_call = ./pg_regress --inputdir=$(srcdir) --dlpath=. $(if $(MULTIBYTE),--multibyte=$(MULTIBYTE)) $(MAXCONNOPT) $(NOLOCALE) --init-file=$(srcdir)/init_file
 
 check: all
 	$(pg_regress_call) --temp-install=./tmp_check --top-builddir=$(top_builddir) --schedule=$(srcdir)/parallel_schedule 
