TINC: Fix make storage_accessmethods_and_vacuum.

--- a/src/test/tinc/Makefile
+++ b/src/test/tinc/Makefile
@@ -55,7 +55,7 @@ aocoalter_catalog_loaders:
 storage_accessmethods_and_vacuum:
 	$(TESTER) $(DISCOVER) -t tincrepo/mpp/gpdb/tests/storage \
 	-s access_methods \
-	-s storage/transaction_management \
+	-s transaction_management \
 	-s vacuum \
 	-q "class!=XidlimitsTests"
 
