Fix bug that requests redistribute motion on no-redistributable column
Prior to this commit, the function `PdrgpcrHashableSubset()` checked for
`FHashable()` instead of `FRedistributable()`. Updated the function as
well as the function name.
This commit also removes unused function `PdrgpcrHashablePrefix()`.

Signed-off-by: Haisheng Yuan <hyuan@pivotal.io>

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -215,7 +215,10 @@ MotionHazard-NoMaterializeSortUnderResult  MotionHazard-NoMaterializeGatherUnder
 MotionHazard-NoMaterializeHashAggUnderResult;
 
 CConstraintNegationTest:
-AggregatesConstraintDeriveNegation CTEConstraintDeriveNegation
+AggregatesConstraintDeriveNegation CTEConstraintDeriveNegation;
+
+CNonRedistributableColTest:
+JOIN-NonRedistributableCol DQA-NonRedistributableCol
 ")
 
 set(mdp_dir "../data/dxl/minidump/")
