--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -199,7 +199,7 @@ CEquivClassTest:
 Equiv-HashedDistr-1 Equiv-HashedDistr-2 EquivClassesAndOr EquivClassesLimit IndexNLJoin_Cast_NoMotion;
 
 COuterJoinTest:
-LOJ-Condition-False FOJ-Condition-False FullOuterJoin FullOuterJoin2
+LOJ-Condition-False NestloopFactorGUC FOJ-Condition-False FullOuterJoin FullOuterJoin2
 LeftJoin-With-Pred-On-Inner LeftJoin-With-Pred-On-Inner2
 LeftJoin-With-Col-Const-Pred LeftJoin-With-Coalesce LOJWithFalsePred
 LOJ-IsNullPred Select-Proj-OuterJoin OuterJoin-With-OuterRefs Join-Disj-Subqs
