Avoid circular references by merging two specs isolating same specs
Consider the below setup. For the repro query, there was an additional
redistribute motion added while joining zoo and bar on zoo.a = bar.a
even though it was not required.

Why a redistribute is not required?

The join of bar and foo is already distributed by bar.a zoo being
distributed by a, there shouldn't have been a redistribute motion on the
output of join between foo and bar. Because as per equivalence zoo.a =
bar.a = foo.a

```sql
create table foo(a int, b int, primary key(a));
   create table bar(a int, b int, primary key(a));
   create table zoo(a int, b int, primary key(a));
   explain select * from foo left join bar on foo.a=bar.a left join zoo on zoo.a=bar.a;
                                              QUERY PLAN
   -------------------------------------------------------------------------------------------------
    Gather Motion 3:1  (slice2; segments: 3)  (cost=0.00..439.00 rows=3 width=24)
      ->  Nested Loop Left Join  (cost=0.00..439.00 rows=1 width=24)
            Join Filter: true
            ->  Redistribute Motion 3:3  (slice1; segments: 3)  (cost=0.00..437.00 rows=1 width=16) ===> This motion is not required because bar is already distributed on a.
                  Hash Key: bar.a
                  ->  Nested Loop Left Join  (cost=0.00..437.00 rows=1 width=16)
                        Join Filter: true
                        ->  Table Scan on foo  (cost=0.00..431.00 rows=1 width=8)
                        ->  Index Scan using bar_pkey on bar  (cost=0.00..6.00 rows=1 width=8)
                              Index Cond: bar.a = foo.a
            ->  Index Scan using zoo_pkey on zoo  (cost=0.00..2.00 rows=1 width=8)
                  Index Cond: zoo.a = bar.a
    Settings:  optimizer=on
    Optimizer status: PQO version 2.53.1
```

Problem:
The existing code SetHashedEquiv was Creating distribution specs which
have circular references. The intention of the SetHashedEquiv code 

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -51,7 +51,7 @@ SemiJoin2InnerJoin SemiJoin2Select-1 SemiJoin2Select-2 SemiJoin2Select-EnforceSu
 InSubqWithPrjListOuterRefNoInnerRefColumnIn InSubqWithPrjListOuterRefNoInnerRefConstIn
 NestedInSubqWithPrjListOuterRefNoInnerRef  InEqualityJoin Correlated-SemiJoin
 CorrelatedSemiJoin-True CorrelatedIN-LeftSemiJoin-True CorrelatedIN-LeftSemiNotIn-True
-InSubqWithPrjListOuterRefNoInnerRefColumnPlusConstIn;
+InSubqWithPrjListOuterRefNoInnerRefColumnPlusConstIn JoinValidateCircularDistSpecRef;
 
 CAntiSemiJoinTest:
 AntiSemiJoin2Select-1 AntiSemiJoin2Select-2 NOT-IN-NotNullBoth NOT-IN-NullInner NOT-IN-NullOuter
