Invalidate cost context when spool contains unresolved partition consumers
ORCA enforces rewindability by adding a `Spool` operator in plans. Spool
has two properties:

1. It materializes an otherwise non-rescannable sub plan-tree, making it
suitable for a rewindable requirement, e.g. the second (relational)
child of a nested loop join, or the second relational child of a merge
join.

2. As a corollary of 1, A `Spool` operator effectively "blocks" any
partition selection that happens outside of the spool sub-tree from
properly propagating into the respective dynamic scans under the spool.

For example:
```sql
CREATE TEMP TABLE foo (a int, b int);
CREATE TEMP TABLE bar (c int, d int);
DROP TABLE IF EXISTS pt;
CREATE TABLE pt (dk int, partkey int) PARTITION BY range(partkey) (START(0) END(9) EVERY(3));
INSERT INTO pt SELECT i, i%9 FROM generate_series(1, 32) i;
INSERT INTO foo SELECT i%3 + 7, i FROM generate_series(1, 4) i;
INSERT INTO bar SELECT i, i FROM generate_series(1, 8) i;
ANALYZE;

EXPLAIN SELECT * FROM foo INNER JOIN (pt LEFT OUTER JOIN bar ON d = dk) ON a < partkey;
```

We want to avoid plans like the following:
```
+--CPhysicalMotionGather(master)
   +--CPhysicalInnerNLJoin
      |--CPhysicalPartitionSelector
      |  +--CPhysicalMotionBroadcast
      |     +--CPhysicalTableScan "foo" ("foo")
      |--CPhysicalSpool
      |  +--CPhysicalLeftOuterHashJoin
      |     |--CPhysicalDynamicTableScan "pt" ("pt")
      |     |--CPhysicalMotionHashDistribute
      |     |  +--CPhysicalTableScan "bar" ("bar")
      |     +--CScalarCmp (=)
      |        |--CScalarIdent "d" (19)
      |        +--CScalarIdent "dk" (9)
      +--CScalarCmp (<)
         |--CScalarIdent "a" (0)
         +--CScalarIdent "partkey" (10)
```

Because the partition selection above happens dynamically, it's intended
to influence the relation delivered by the dynamic scan
(`CPhysicalDynamicTableScan "pt"`) and hence the join result
(`CPhysicalLeftOuterHashJoin`). However, the `Spool` separati

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -219,6 +219,10 @@ AggregatesConstraintDeriveNegation CTEConstraintDeriveNegation;
 
 CNonRedistributableColTest:
 JOIN-NonRedistributableCol DQA-NonRedistributableCol
+MotionHazard-NoMaterializeHashAggUnderResult;
+
+CInvalidCostContextTest:
+SpoolShouldInvalidateUnresolvedDynamicScans
 ")
 
 set(mdp_dir "../data/dxl/minidump/")
