Only check dynamic programming threshold for ExpandNAryJoinDP xform
`CXformUtils::ExfpExpandJoinOrder` is common to both transformations -
`CXformExpandNAryJoinMinCard` and `CXformExpandNAryJoinDP`. So we moved out
checking for dynamic programming threshold out of it. Before this, in case
number of relations exceeded the dynamic programming threshold, ORCA would not
even go for `CXformExpandNAryJoinMinCard`.

Signed-off-by: Sambitesh Dash <sdash@pivotal.io>

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -122,7 +122,7 @@ CICGMiscTest:
 OrderByNullsFirst ConvertHashToRandomSelect ConvertHashToRandomInsert HJN-DeeperOuter CTAS CTAS-Random CheckAsUser
 ProjectRepeatedColumn1 ProjectRepeatedColumn2 NLJ-BC-Outer-Spool-Inner Self-Comparison Self-Comparison-Nullable
 SelectCheckConstraint ExpandJoinOrder SelectOnBpchar EqualityJoin EffectsOfJoinFilter InnerJoin-With-OuterRefs
-UDA-AnyElement-1 UDA-AnyElement-2;
+UDA-AnyElement-1 UDA-AnyElement-2 MinCardinalityNaryJoin;
 
 CArrayCmpTest:
 ArrayConcat ArrayRef FoldedArrayCmp IN-ArrayCmp NOT-IN-ArrayCmp ArrayCmpAll UDA-AnyArray InClauseWithMCV
