--- a/concourse/pipelines/gpdb_master-generated.yml
+++ b/concourse/pipelines/gpdb_master-generated.yml
@@ -1,9 +1,9 @@
 ## ######################################################################
-##            ___   ___    _  _  ___ _____   ___ ___ ___ _____ 
+##            ___   ___    _  _  ___ _____   ___ ___ ___ _____
 ##           |   \ / _ \  | \| |/ _ \_   _| | __|   \_ _|_   _|
-##           | |) | (_) | | .` | (_) || |   | _|| |) | |  | |  
-##           |___/ \___/  |_|\_|\___/ |_|   |___|___/___| |_|  
-##            _____ _  _ ___ ___   ___ ___ _    ___ _ 
+##           | |) | (_) | | .` | (_) || |   | _|| |) | |  | |
+##           |___/ \___/  |_|\_|\___/ |_|   |___|___/___| |_|
+##            _____ _  _ ___ ___   ___ ___ _    ___ _
 ##           |_   _| || |_ _/ __| | __|_ _| |  | __| |
 ##             | | | __ || |\__ \ | _| | || |__| _||_|
 ##             |_| |_||_|___|___/ |_| |___|____|___(_)
@@ -20,11 +20,11 @@
 ## ======================================================================
 
 ## ======================================================================
-##   __ _ _ __ ___  _   _ _ __  ___ 
+##   __ _ _ __ ___  _   _ _ __  ___
 ##  / _` | '__/ _ \| | | | '_ \/ __|
 ## | (_| | | | (_) | |_| | |_) \__ \
 ##  \__, |_|  \___/ \__,_| .__/|___/
-##  |___/                |_|        
+##  |___/                |_|
 ## ======================================================================
 
 groups:
@@ -198,12 +198,12 @@ groups:
   - gate_ud_end
 
 ## ======================================================================
-##                                           _                         
-##  _ __ ___  ___  ___  _   _ _ __ ___ ___  | |_ _   _ _ __   ___  ___ 
+##                                           _
+##  _ __ ___  ___  ___  _   _ _ __ ___ ___  | |_ _   _ _ __   ___  ___
 ## | '__/ _ \/ __|/ _ \| | | | '__/ __/ _ \ | __| | | | '_ \ / _ \/ __|
 ## | | |  __/\__ \ (_) | |_| | | | (_|  __/ | |_| |_| | |_) |  __/\__ \
 ## |_|  \___||___/\___/ \__,_|_|  \___\___|  \__|\__, | .__/ \___||___/
-##                                               |___/|_|              
+##                                               |___/|_|
 ## ======================================================================
 
 resource_types:
@@ -213,7 +213,7 @@ resource_types:
     repository: ljfranklin/terraform-resource
 
 ## ======================================================================
-##  _ __ ___  ___  ___  _   _ _ __ ___ ___  ___ 
+##  _ __ ___  ___  ___  _   _ _ __ ___ ___  ___
 ## | '__/ _ \/ __|/ _ \| | | | '__/ __/ _ \/ __|
 ## | | |  __/\__ \ (_) | |_| | | | (_|  __/\__ \
 ## |_|  \___||___/\___/ \__,_|_|  \___\___||___/
@@ -477,8 +477,8 @@ resources:
     stop: {{reduced-frequency-trigger-stop}}
 
 ## ======================================================================
-##                   _                    
-##   __ _ _ __   ___| |__   ___  _ __ ___ 
+##                   _
+##   __ _ _ __   ___| |__   ___  _ __ ___
 ##  / _` | '_ \ / __| '_ \ / _ \| '__/ __|
 ## | (_| | | | | (__| | | | (_) | |  \__ \
 ##  \__,_|_| |_|\___|_| |_|\___/|_|  |___/
@@ -627,23 +627,23 @@ cs_ccp_run_tests_params_anchor: &cs_ccp_run_tests_params
     <<: *ccp_destroy
 
 ## ======================================================================
-##    _       _         
-##   (_) ___ | |__  ___ 
+##    _       _
+##   (_) ___ | |__  ___
 ##   | |/ _ \| '_ \/ __|
 ##   | | (_) | |_) \__ \
 ##  _/ |\___/|_.__/|___/
-## |__/                 
+## |__/
 ## ======================================================================
 
 jobs:
 
 ## ======================================================================
-##   ____                      _ _      
-##  / ___|___  _ __ ___  _ __ (_) | ___ 
+##   ____                      _ _
+##  / ___|___  _ __ ___  _ __ (_) | ___
 ## | |   / _ \| '_ ` _ \| '_ \| | |/ _ \
 ## | |__| (_) | | | | | | |_) | | |  __/
 ##  \____\___/|_| |_| |_| .__/|_|_|\___|
-##                      |_|             
+##                      |_|
 ## ======================================================================
 
 - name: gate_compile_start
@@ -981,9 +981,9 @@ jobs:
 ## ======================================================================
 ##  ___ ______        __
 ## |_ _/ ___\ \      / /
-##  | | |    \ \ /\ / / 
-##  | | |___  \ V  V /  
-## |___\____|  \_/\_/   
+##  | | |    \ \ /\ / /
+##  | | |___  \ V  V /
+## |___\____|  \_/\_/
 ## ======================================================================
 
 - name: icw_planner_centos6
@@ -1136,6 +1136,7 @@ jobs:
         disk_size: 128
         number_of_nodes: 1
         default_image_user: root
+        instance_type: n1-standard-4
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     params:
@@ -1175,6 +1176,7 @@ jobs:
         disk_size: 128
         number_of_nodes: 1
         default_image_user: root
+        instance_type: n1-standard-4
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     params:
@@ -1331,11 +1333,11 @@ jobs:
       file: bin_gpdb_centos6/bin_gpdb.tar.gz
 
 ## ======================================================================
-##   ____ ____  
-##  / ___/ ___| 
-## | |   \___ \ 
+##   ____ ____
+##  / ___/ ___|
+## | |   \___ \
 ## | |___ ___) |
-##  \____|____/ 
+##  \____|____/
 ## ======================================================================
 
 - name: gate_cs_start
@@ -1500,11 +1502,11 @@ jobs:
       trigger: true
 
 ## ======================================================================
-##  __  __ ____  ____  
-## |  \/  |  _ \|  _ \ 
+##  __  __ ____  ____
+## |  \/  |  _ \|  _ \
 ## | |\/| | |_) | |_) |
-## | |  | |  __/|  __/ 
-## |_|  |_|_|   |_|    
+## | |  | |  __/|  __/
+## |_|  |_|_|   |_|
 ## ======================================================================
 
 - name: gate_mpp_start
@@ -1694,7 +1696,7 @@ jobs:
       trigger: true
 
 ## ======================================================================
-##  __  __ __  __ 
+##  __  __ __  __
 ## |  \/  |  \/  |
 ## | |\/| | |\/| |
 ## | |  | | |  | |
@@ -2010,7 +2012,7 @@ jobs:
       trigger: true
 
 ## ======================================================================
-##  ____  ____  __  __ 
+##  ____  ____  __  __
 ## |  _ \|  _ \|  \/  |
 ## | | | | |_) | |\/| |
 ## | |_| |  __/| |  | |
@@ -2254,11 +2256,11 @@ jobs:
       - DPM_gptransfer
 
 ## ======================================================================
-##  _   _ ____  
-## | | | |  _ \ 
+##  _   _ ____
+## | | | |  _ \
 ## | | | | | | |
 ## | |_| | |_| |
-##  \___/|____/ 
+##  \___/|____/
 ## ======================================================================
 
 - name: gate_ud_start
@@ -2335,8 +2337,8 @@ jobs:
       trigger: true
 
 ## ======================================================================
-##  ____      _                     
-## |  _ \ ___| | ___  __ _ ___  ___ 
+##  ____      _
+## |  _ \ ___| | ___  __ _ ___  ___
 ## | |_) / _ \ |/ _ \/ _` / __|/ _ \
 ## |  _ <  __/ |  __/ (_| \__ \  __/
 ## |_| \_\___|_|\___|\__,_|___/\___|
