--- a/concourse/pipelines/templates/gpdb-tpl.yml
+++ b/concourse/pipelines/templates/gpdb-tpl.yml
@@ -602,17 +602,17 @@ resources:
 ## ======================================================================
 
 anchors:
-ccp_default_params_anchor: &ccp_default_params
+- &ccp_default_params
   action: create
   delete_on_failure: true
   generate_random_name: true
   terraform_source: ccp_src/google/
 
-ccp_vars_anchor: &ccp_default_vars
+- &ccp_default_vars
   instance_type: n1-standard-1
   PLATFORM: centos6
 
-ccp_destroy_anchor: &ccp_destroy
+- &ccp_destroy
   put: terraform
   params:
     action: destroy
@@ -624,7 +624,7 @@ ccp_destroy_anchor: &ccp_destroy
   get_params:
     action: destroy
 
-ccp_destroy_two_clusters_anchor: &ccp_destroy_two_clusters
+- &ccp_destroy_two_clusters
   do:
   - *ccp_destroy
   - put: terraform2
@@ -639,7 +639,7 @@ ccp_destroy_two_clusters_anchor: &ccp_destroy_two_clusters
     get_params:
       action: destroy
 
-ccp_gen_cluster_default_params_anchor: &ccp_gen_cluster_default_params
+- &ccp_gen_cluster_default_params
   AWS_ACCESS_KEY_ID: {{tf-machine-access-key-id}}
   AWS_SECRET_ACCESS_KEY: {{tf-machine-secret-access-key}}
   AWS_DEFAULT_REGION: {{aws-region}}
@@ -647,7 +647,7 @@ ccp_gen_cluster_default_params_anchor: &ccp_gen_cluster_default_params
   BUCKET_NAME: {{tf-bucket-name}}
   CLOUD_PROVIDER: google
 
-set_failed_anchor: &set_failed
+- &set_failed
   do:
   - task: on_failure_set_failed
     config:
@@ -673,7 +673,7 @@ set_failed_anchor: &set_failed
         BUCKET_PATH: clusters-google/
         BUCKET_NAME: {{tf-bucket-name}}
 
-set_failed_two_clusters_anchor: &set_failed_two_clusters
+- &set_failed_two_clusters
   do:
   - *set_failed
   - task: on_failure_set_failed
@@ -700,7 +700,7 @@ set_failed_two_clusters_anchor: &set_failed_two_clusters
         BUCKET_PATH: clusters-google/
         BUCKET_NAME: {{tf-bucket-name}}
 
-cs_ccp_aggregate_dpm_start_anchor: &cs_ccp_aggregate_dpm_start
+- &cs_ccp_aggregate_dpm_start
   - get: gpdb_src
     passed: [gate_dpm_start]
   - get: gpdb_binary
@@ -710,7 +710,7 @@ cs_ccp_aggregate_dpm_start_anchor: &cs_ccp_aggregate_dpm_start
   - get: ccp_src
   - get: centos-gpdb-dev-6
 
-cs_ccp_aggregate_cluster_start_anchor: &cs_ccp_aggregate_cluster_start
+- &cs_ccp_aggregate_cluster_start
   - get: gpdb_src
     passed: [gate_cs_start]
   - get: gpdb_binary
@@ -720,24 +720,24 @@ cs_ccp_aggregate_cluster_start_anchor: &cs_ccp_aggregate_cluster_start
   - get: ccp_src
   - get: centos-gpdb-dev-6
 
-cs_ccp_terraform_vars_anchor: &cs_ccp_terraform_vars
+- &cs_ccp_terraform_vars
   aws_instance-node-instance_type: m4.large
   aws_ebs_volume_type: gp2
   number_of_nodes: 1
 
-cs_ccp_terraform_params_anchor: &cs_ccp_terraform_params
+- &cs_ccp_terraform_params
   params:
     <<: *ccp_default_params
     vars:
       <<: *ccp_default_vars
       <<: *cs_ccp_terraform_vars
 
-cs_ccp_gen_cluster_params_anchor: &cs_ccp_gen_cluster_params
+- &cs_ccp_gen_cluster_params
   file: ccp_src/ci/tasks/gen_cluster.yml
   params:
     <<: *ccp_gen_cluster_default_params
 
-cs_ccp_run_tests_params_anchor: &cs_ccp_run_tests_params
+- &cs_ccp_run_tests_params
   file: gpdb_src/concourse/tasks/run_tinc.yml
   image: centos-gpdb-dev-6
   on_success:
