CI: Use larger instance type for icw sles12 tests
Update template pipeline to reflect this change
553b8754a6036d8b41a612c145ee380e740d4fe7

Authored-by: Alexandra Wang <lewang@pivotal.io>

--- a/concourse/pipelines/templates/gpdb-tpl.yml
+++ b/concourse/pipelines/templates/gpdb-tpl.yml
@@ -1299,6 +1299,7 @@ jobs:
         disk_size: 128
         number_of_nodes: 1
         default_image_user: root
+        instance_type: n1-standard-4
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     params:
@@ -1338,6 +1339,7 @@ jobs:
         disk_size: 128
         number_of_nodes: 1
         default_image_user: root
+        instance_type: n1-standard-4
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     params:
